Corrected italic asterisks
Cleaned up markings of *” and replaced with ”* for better markdown
compatibility (some things weren’t being italicised correctly)

--- a/004.md
+++ b/004.md
@@ -131,6 +131,6 @@ Griphook was favouring Harry with a gaze of frank respect, possibly even outrigh
 
 “But oh, Professor McGonagall, why rain on my parade? Surely this is a *happy* day, when I discover all things wizarding for the first time! Why act the part of the grumpy grownup when instead you could smile and remember your own innocent childhood, watching the look of delight upon my young face as I buy a few toys using an insignificant fraction of the wealth that I earned by defeating the most terrible wizard Britain has ever known, not that I’m accusing you of being ungrateful or anything, but still, what are a few toys compared to that?”
 
-*“You,*” growled Professor McGonagall. There was a look on her face so fearsome and terrible that Harry squeaked and stepped back, knocking over a pile of gold coins with a great jingling noise and sprawling backwards into a heap of money. Griphook sighed and put a palm over his face. “I would be doing a great service to wizarding Britain, Mr. Potter, if I locked you in this vault and left you here.”
+*“You,”* growled Professor McGonagall. There was a look on her face so fearsome and terrible that Harry squeaked and stepped back, knocking over a pile of gold coins with a great jingling noise and sprawling backwards into a heap of money. Griphook sighed and put a palm over his face. “I would be doing a great service to wizarding Britain, Mr. Potter, if I locked you in this vault and left you here.”
 
 And they left without any more trouble.
