--- a/006.md
+++ b/006.md
@@ -17,7 +17,7 @@ A/N: The “Aftermath” section of this chapter is part of the story, *not* oma
 
 Most children would have at least waited to get their *wands* first.
 
-“Bag of *okane,*” said Harry. The heavy bag of gold popped up into his hand.
+“Bag of *okane,”* said Harry. The heavy bag of gold popped up into his hand.
 
 Harry withdrew the bag, then plunged it again into the mokeskin pouch. He took out his hand, put it back in, and said, “Bag of tokens of economic exchange.” That time his hand came out empty.
 
@@ -27,11 +27,11 @@ Harry James Potter-Evans-Verres had gotten his hands on at least one magical ite
 
 “Professor McGonagall,” Harry said to the bemused witch strolling beside him, “can you give me two words, one word for gold, and one word for something else that isn’t money, in a language that I wouldn’t know? But don’t tell me which is which.”
 
-*“Ahava* and *zahav,*” said Professor McGonagall. “That’s Hebrew, and the other word means love.”
+*“Ahava* and *zahav,”* said Professor McGonagall. “That’s Hebrew, and the other word means love.”
 
-“Thank you, Professor. Bag of *ahava.*” Empty.
+“Thank you, Professor. Bag of *ahava.”* Empty.
 
-“Bag of *zahav.*” And it popped up into his hand.
+“Bag of *zahav.”* And it popped up into his hand.
 
 “Zahav is gold?” Harry questioned, and Professor McGonagall nodded.
 
@@ -42,7 +42,7 @@ Harry thought over his collected experimental data. It was only the most crude a
 The witch beside him lifted a lofty eyebrow. “Problems, Mr. Potter?”
 
 “I just falsified every single hypothesis I had! How can it know that ‘bag of 115 Galleons’ is okay but not ‘bag of 90 plus 25 Galleons?’ It can *count* but it can’t *add?* It can understand nouns, but not some noun phrases that mean the same thing? The person who made this probably didn’t speak Japanese and *I* don’t speak any Hebrew, so it’s not using *their* knowledge, and it’s not using *my* knowledge—” Harry waved a
-hand helplessly. “The rules seem *sorta* consistent but they don’t *mean* anything! I’m not even going to ask how a *pouch* ends up with voice recognition and natural language understanding when the best Artificial Intelligence programmers can’t get the fastest supercomputers to do it after thirty-five years of hard work,” Harry gasped for breath, “but *what* is going *on?*”
+hand helplessly. “The rules seem *sorta* consistent but they don’t *mean* anything! I’m not even going to ask how a *pouch* ends up with voice recognition and natural language understanding when the best Artificial Intelligence programmers can’t get the fastest supercomputers to do it after thirty-five years of hard work,” Harry gasped for breath, “but *what* is going *on?”*
 
 “Magic,” said Professor McGonagall.
 
@@ -178,7 +178,7 @@ Harry heard the salesgirl gasp, and he looked up to see her staring at him with 
 
 Professor McGonagall reached down, and took Harry’s hand in hers, gently but firmly, and pulled Harry out of the main street of Diagon Alley, leading him into an alleyway between two shops which was paved in dirty bricks and dead-ended in a wall of solid black dirt.
 
-The tall witch pointed her wand at the main street and spoke, *“Quietus*” she said, and a screen of silence descended around them, blocking out all the street noises.
+The tall witch pointed her wand at the main street and spoke, *“Quietus”* she said, and a screen of silence descended around them, blocking out all the street noises.
 
 *What did I do wrong…*
 
@@ -298,7 +298,7 @@ The witch went on, still in that soft voice. “And what would happen to it afte
 
 “Excuse me,” Harry said, and he reached up to take Professor McGonagall by the hand, gently but firmly, and steered her into yet another alleyway; after ducking so many well-wishers the process had become almost unnoticeably routine. “Please cast that silencing spell.”
 
-*“Quietus.*”
+*“Quietus.”*
 
 Harry’s voice was shaking. “That owl does *not* represent me, my parents *never* locked me in a cupboard and left me to starve, I do *not* have abandonment fears and I *don’t like the trend of your thoughts, Professor McGonagall!”*
 
@@ -321,7 +321,7 @@ Harry took a fast step back, and his hand snapped up and knocked hers away.
 
 McGonagall froze, then she pulled her hand back, and took a step backwards. “Harry, it’s all right,” she said. “I believe you.”
 
-*“Do you,*” Harry hissed. The fury still roaring through his blood. “Or are you just waiting to get away from me so you can file the papers?”
+*“Do you,”* Harry hissed. The fury still roaring through his blood. “Or are you just waiting to get away from me so you can file the papers?”
 
 “Harry, I saw your house. I saw you with your parents. They love you. You love them. I do believe you when you say that your parents are not abusing you. But I *had* to ask, because there is something strange at work here.”
 
@@ -381,7 +381,7 @@ He had *felt* the magic pouring up his arm, and in that instant, realised that h
 
 And—
 
-*”It is very curious indeed that you should be destined for this wand when its brother why, its brother gave you that scar.”*
+*“It is very curious indeed that you should be destined for this wand when its brother why, its brother gave you that scar.”*
 
 That could not *possibly* be coincidence. There had been *thousands* of wands in that shop. Well, okay, actually it *could* be coincidence, there were six billion people in the world and thousand-to-one coincidences happened every day. But Bayes’s Theorem said that any reasonable hypothesis which made it *more* likely than a thousand-to-one that he’d end up with the brother to the Dark Lord’s wand, was going to have an advantage.
 
@@ -440,7 +440,7 @@ Harry turned his own head to scan the street. Nope, no one nearby. “He’s *no
 
 “Mr. Potter—”
 
-“The Dark Lord is alive. Of *course* he’s alive. It was an *act* of utter *optimism* for me to have even *dreamed* otherwise. I *must* have taken leave of my *senses*, I can’t *imagine* what I was *thinking.* Just because *someone* said that his body was found burned to a *crisp*, I can’t imagine why I would have thought he was *dead.* *Clearly* I have much left to learn about the art of proper *pessimism.*”
+“The Dark Lord is alive. Of *course* he’s alive. It was an *act* of utter *optimism* for me to have even *dreamed* otherwise. I *must* have taken leave of my *senses*, I can’t *imagine* what I was *thinking.* Just because *someone* said that his body was found burned to a *crisp*, I can’t imagine why I would have thought he was *dead.* *Clearly* I have much left to learn about the art of proper *pessimism.”*
 
 “Mr. Potter—”
 
