--- a/008.md
+++ b/008.md
@@ -39,7 +39,7 @@ The imputation that this boy thought she was *scared* of him made her hand send 
 
 *“I* didn’t say you *said* you were Hermione Granger, I just said you were Hermione Granger. If you’re asking how I know, it’s because I know everything. Good evening ladies and gentlemen, my name is Harry James Potter-Evans-Verres or Harry Potter for short, I know that probably doesn’t mean anything to *you* for a change—”
 
-Hermione’s mind finally made the connection. The scar on his forehead, the shape of a lightning bolt. “Harry Potter! You’re in *Modern Magical History* and *The Rise and Fall of the Dark Arts* and *Great Wizarding Events of the Twentieth Century.*” It was actually the very first time in her whole life that she’d *met* someone from inside a *book,* and it was a rather odd feeling.
+Hermione’s mind finally made the connection. The scar on his forehead, the shape of a lightning bolt. “Harry Potter! You’re in *Modern Magical History* and *The Rise and Fall of the Dark Arts* and *Great Wizarding Events of the Twentieth Century.”* It was actually the very first time in her whole life that she’d *met* someone from inside a *book,* and it was a rather odd feeling.
 
 The boy blinked three times. “I’m in *books*? Wait, of course I’m in books… what a strange thought.”
 
