--- a/011.md
+++ b/011.md
@@ -146,7 +146,7 @@ When there was once more silence in the room, Harry sat on the stool and *carefu
 
 Thinking, just as hard as he could: *Don’t Sort me yet! I have questions I need to ask you! Have I ever been Obliviated? Did you Sort the Dark Lord when he was a child and can you tell me about his weaknesses? Can you tell me why I got the brother wand to the Dark Lord’s? Is the Dark Lord’s ghost bound to my scar and is that why I get so angry sometimes? Those are the most important questions, but if you’ve got another moment can you tell me anything about how to rediscover the lost magics that created you?*
 
-And the Sorting Hat answered, *“No. Yes. No. No. Yes and no, next time don’t ask double questions. No.*” 
+And the Sorting Hat answered, *“No. Yes. No. No. Yes and no, next time don’t ask double questions. No.”* 
 
 and out loud, “RAVENCLAW!”
 
