--- a/014.md
+++ b/014.md
@@ -143,7 +143,7 @@ McGonagall looked quite struck. “That’s an excellent idea, Mr. Potter. I sha
 
 *That’s it, it’s official now, they’ve ratified it in Parliament, everyone in the wizarding world is completely stupid.*
 
-“And while I hate to get all *PHILOSOPHICAL,*” Harry desperately tried to lower his voice to something under a shriek, “has anyone thought about the *IMPLICATIONS* of going back six hours and doing something that changes time which would pretty much *DELETE ALL THE PEOPLE AFFECTED* and *REPLACE THEM WITH DIFFERENT VERSIONS—*”
+“And while I hate to get all *PHILOSOPHICAL,”* Harry desperately tried to lower his voice to something under a shriek, “has anyone thought about the *IMPLICATIONS* of going back six hours and doing something that changes time which would pretty much *DELETE ALL THE PEOPLE AFFECTED* and *REPLACE THEM WITH DIFFERENT VERSIONS—”*
 
 “Oh, you can’t *change* time!” Professor McGonagall interrupted. “Good heavens, Mr. Potter, do you think these would be allowed students if *that* was possible? What if someone tried to change their test scores?”
 
@@ -161,11 +161,11 @@ Professor McGonagall pursed her lips. “I understand that it can be quite disco
 
 She smiled tolerantly. “Mr. Potter, I think I’d remember hearing if *that* had ever happened.”
 
-*“THAT IS NOT REASSURING! HAVEN’T YOU PEOPLE EVER HEARD OF THE ANTHROPIC PRINCIPLE? AND WHAT IDIOT EVER BUILT ONE OF THESE THINGS FOR THE FIRST TIME?*”
+*“THAT IS NOT REASSURING! HAVEN’T YOU PEOPLE EVER HEARD OF THE ANTHROPIC PRINCIPLE? AND WHAT IDIOT EVER BUILT ONE OF THESE THINGS FOR THE FIRST TIME?”*
 
 Professor McGonagall actually laughed. It was a pleasant, glad sound that seemed surprisingly out of place on that stern face. “You’re having another ‘you turned into a cat’ moment, aren’t you, Mr. Potter. You probably don’t want to hear this, but it’s quite endearingly cute.”
 
-“Turning into a cat doesn’t even *BEGIN* to compare to this. You know right up until this moment I had this awful suppressed thought somewhere in the back of my mind that the only remaining answer was that my whole universe was a computer simulation like in the book *Simulacron 3* but now *even that is ruled out* because this little toy *ISN’T TURING COMPUTABLE!* A Turing machine could simulate going back into a defined moment of the past and computing a different future from there, an oracle machine could rely on the halting behavior of lower-order machines, but what you’re saying is that reality somehow self-consistently computes in one sweep using information that hasn’t… happened… yet…”
+“Turning into a cat doesn’t even *BEGIN* to compare to this. You know right up until this moment I had this awful suppressed thought somewhere in the back of my mind that the only remaining answer was that my whole universe was a computer simulation like in the book *Simulacron 3* but now *even that is ruled out* because this little toy *ISN’T TURING COMPUTABLE!* A Turing machine could simulate going back into a defined moment of the past and computing a different future from there, an oracle machine could rely on the halting behaviour of lower-order machines, but what you’re saying is that reality somehow self-consistently computes in one sweep using information that hasn’t… happened… yet…”
 
 Realisation struck Harry a pile-driver blow.
 
