--- a/019.md
+++ b/019.md
@@ -13,7 +13,7 @@ Draco had a stern expression on his face, and his green-trimmed robes somehow lo
 
 “You heard da boss! Talk!”
 
-“You two, on the other hand, *shut up.*”
+“You two, on the other hand, *shut up.”*
 
 The last session of classes on Friday was about to start, in that vast auditorium where all four Houses learned Defence, er, Battle Magic.
 
@@ -27,7 +27,7 @@ Harry leaned back in his chair and bestowed a look of great solemnity upon Draco
 
 “You ask, what is our aim?” Harry declaimed. “I can answer in one word. It is victory. Victory at all costs—Victory in spite of all terrors—Victory, however long and hard the road may be, for without victory there is no—”
 
-*“Talk about Snape,*” Draco hissed. *“What did you do?”*
+*“Talk about Snape,”* Draco hissed. *“What did you do?”*
 
 Harry wiped away the fake solemnity and gave Draco a more serious look.
 
@@ -115,7 +115,7 @@ Harry’s face was now neutral. He had not thought of that and he really, really
 
 “And,” Harry said, “now Lucius thinks maybe *I* can tell him. Did you already get an owl—”
 
-“I will tonight,” Draco said, and laughed. “It will say,” his voice took on a different, more formal cadence, *“My beloved son: I’ve already told you of Harry Potter’s potential importance. As you have already realised, his importance has now become greater and more urgent. If you see any possible avenue of friendship or point of pressure with him, you must pursue it, and the full resources of Malfoy are at your disposal if needed.*”
+“I will tonight,” Draco said, and laughed. “It will say,” his voice took on a different, more formal cadence, *“My beloved son: I’ve already told you of Harry Potter’s potential importance. As you have already realised, his importance has now become greater and more urgent. If you see any possible avenue of friendship or point of pressure with him, you must pursue it, and the full resources of Malfoy are at your disposal if needed.”*
 
 Gosh. “Well,” Harry said, “not commenting on whether or not your whole complicated edifice of theory is true, let me just say that we are not quite such good friends as yet.”
 
@@ -183,7 +183,7 @@ Harry giggled before he could stop himself.
 
 *Great.* “Um… never use a complicated way of dealing with an enemy when you can just Abracadabra them?”
 
-“The *term,* Mr. Potter, is *Avada Kedavra,*” Professor Quirrell’s voice sounded a bit sharp for some reason, “and no, that was *not* on the list I made at age thirteen. Would you care to guess again?”
+“The *term,* Mr. Potter, is *Avada Kedavra,”* Professor Quirrell’s voice sounded a bit sharp for some reason, “and no, that was *not* on the list I made at age thirteen. Would you care to guess again?”
 
 “Ah… never brag to anyone about your evil master plan?”
 
@@ -455,7 +455,7 @@ He was beginning to doubt Professor Quirrell’s real motives in teaching this s
 
 A foot rested on Harry’s buttocks and a moment later Harry was pushed hard to the side, sending him sprawling on his back.
 
-Derrick laughed. “This is *fun,*” he said.
+Derrick laughed. “This is *fun,”* he said.
 
 All he had to do was say it was over. And report the whole thing to the Headmaster’s office. That would be the end of this *Defence Professor* and his ill-fated stay at Hogwarts and… Professor McGonagall would be angry about that, but…
 
