--- a/020.md
+++ b/020.md
@@ -111,7 +111,7 @@ Harry wasn’t a fool either. “Can I consider you to have said yes?”
 
 “Very good, Mr. Potter. You may indeed so consider.”
 
-*“Professor Quirrell—*”
+*“Professor Quirrell—”*
 
 “I won’t repeat what you’re about to say,” Professor Quirrell said, smiling.
 
@@ -143,7 +143,7 @@ Professor Quirrell blinked.
 
 “Why does that matter to you?” Professor Quirrell said. “What have they done for you?”
 
-Harry laughed. “Oh, now *that* was around as subtle as *Atlas Shrugged.*”
+Harry laughed. “Oh, now *that* was around as subtle as *Atlas Shrugged.”*
 
 “Pardon me?” Professor Quirrell said again.
 
