--- a/022.md
+++ b/022.md
@@ -173,7 +173,7 @@ Now Harry was staring at the red brick directly in front of him and contemplatin
 
 “But it *is* cute. It’s such a boy thing to do.”
 
-*“Drop dead.*”
+*“Drop dead.”*
 
 “Aw, you say the most romantic things.”
 
@@ -239,7 +239,7 @@ Draco reached up and raked fingers through his hair in frustration, his cowl bru
 
 Harry Potter’s face tightened. “Anyone in Slytherin who can’t understand the concept of acting nice toward people you don’t actually like should be ground up and fed to pet snakes.”
 
-“There are a lot of people in Slytherin who *don’t,*” Draco said, his voice serious. “Most people are stupid, and you have to look good in front of them anyway.” Harry Potter *had* to understand that if he ever wanted to get anywhere in life.
+“There are a lot of people in Slytherin who *don’t,”* Draco said, his voice serious. “Most people are stupid, and you have to look good in front of them anyway.” Harry Potter *had* to understand that if he ever wanted to get anywhere in life.
 
 “What do *you* care what other people think? Are you really going to live your life needing to explain everything you do to the dumbest idiots in Slytherin, letting *them* judge *you?* I’m sorry, Draco, but I’m not lowering my cunning plots to the level of what the dumbest Slytherins can understand, just because it might make you look bad otherwise. Not even your friendship is worth that. It would *take all the fun out of life.* Tell me *you* haven’t ever thought the same thing when someone in Slytherin is being too stupid to breathe, that it’s beneath the dignity of a Malfoy to have to pander to them.”
 
@@ -275,9 +275,9 @@ That was exactly what Draco *had* told Slytherin, and he still wasn’t sure whe
 
 Harry Potter raised his eyebrows. “Who?”
 
-“She writes for the *Daily Prophet,*” Draco said. He tried to keep the worry out of his voice. The *Daily Prophet* was one of Father’s primary tools, he used it like a wizard’s wand. “That’s the newspaper people actually pay attention to. Rita Skeeter writes about celebrities, and as she puts it, uses her quill to puncture their over-inflated reputations. If she can’t find any rumors about you, she’ll just make up her own.”
+“She writes for the *Daily Prophet,”* Draco said. He tried to keep the worry out of his voice. The *Daily Prophet* was one of Father’s primary tools, he used it like a wizard’s wand. “That’s the newspaper people actually pay attention to. Rita Skeeter writes about celebrities, and as she puts it, uses her quill to puncture their over-inflated reputations. If she can’t find any rumors about you, she’ll just make up her own.”
 
-“I *see,*” said Harry Potter. His green-lit face looked very thoughtful beneath the cowl.
+“I *see,”* said Harry Potter. His green-lit face looked very thoughtful beneath the cowl.
 
 Draco hesitated before saying what he had to say next. By now someone had certainly reported to Father that he was courting Harry Potter, and Father would also know that Draco hadn’t written home about it, and Father would understand that Draco didn’t think he could actually keep it a secret, which sent a clear message that Draco was practicing his own game now but still on Father’s side, since if Draco had been tempted away, he would have been sending false reports.
 
@@ -421,7 +421,7 @@ And then—
 
 Dr. Potter was approaching with a superior smirk on his face.
 
-“This is my latest paper, *On the Heritability of Magical Ability,*” Dr. Potter stated confidently, and thrust out the parchment. “I have decided to allow your journal to publish it, and have prepared it in perfect accordance with your guidelines so that you may publish it quickly.”
+“This is my latest paper, *On the Heritability of Magical Ability,”* Dr. Potter stated confidently, and thrust out the parchment. “I have decided to allow your journal to publish it, and have prepared it in perfect accordance with your guidelines so that you may publish it quickly.”
 
 The Death Eater decided to track down and kill Dr. Potter after his mission was done. Dr. Malfoy kept a polite smile on his face, since his rivals were watching, and said…
 
@@ -439,7 +439,7 @@ The Death Eater was starting to get nervous about the fact that he wasn’t a re
 
 Draco was trying furiously to order his brain to think, what would he say if he was posing as a member of Dumbledore’s faction, what *did* they claim was the explanation for wizardkind’s decline, Draco had never bothered to actually ask that…
 
-“If you can’t think of any other way to explain my data, you’ll have to publish my paper, *Dr. Malfoy.*”
+“If you can’t think of any other way to explain my data, you’ll have to publish my paper, *Dr. Malfoy.”*
 
 It was the sneer on Dr. Potter’s face that did it.
 
@@ -546,7 +546,7 @@ Harry nodded decisively. “That’s one.” He wrote it down on the parchment u
 
 “What kind of Charms did students used to cast in their first year at Hogwarts?” said Draco. “If they used to be able to cast much more powerful Charms, the blood was stronger—”
 
-Harry Potter shook his head. “Or magic itself was stronger. We have to figure out some way of telling the *difference.*” Harry stood up from his chair, began pacing nervously through the classroom. “No, wait, that might still work. Suppose different spells use up different amounts of magical energy. Then if the ambient magic weakened, the powerful spells would die first, but the spells everyone learns in their first year would stay the same…” Harry’s nervous pacing sped up. “It’s not a very good test, it’s more about powerful wizardry being lost versus all wizardry being lost, someone’s blood could be too weak for powerful wizardry but strong enough for easy spells… Draco, do you know if more powerful wizards within a *single* era, like powerful wizards from just this century, are more powerful as children? If the Dark Lord had cast the Cooling Charm when he was eleven, could he have frozen the whole room?”
+Harry Potter shook his head. “Or magic itself was stronger. We have to figure out some way of telling the *difference.”* Harry stood up from his chair, began pacing nervously through the classroom. “No, wait, that might still work. Suppose different spells use up different amounts of magical energy. Then if the ambient magic weakened, the powerful spells would die first, but the spells everyone learns in their first year would stay the same…” Harry’s nervous pacing sped up. “It’s not a very good test, it’s more about powerful wizardry being lost versus all wizardry being lost, someone’s blood could be too weak for powerful wizardry but strong enough for easy spells… Draco, do you know if more powerful wizards within a *single* era, like powerful wizards from just this century, are more powerful as children? If the Dark Lord had cast the Cooling Charm when he was eleven, could he have frozen the whole room?”
 
 Draco’s face screwed up as he tried to recollect. “I can’t remember hearing anything about the Dark Lord but I think Dumbledore’s supposed to have done something amazing on his Transfiguration O.W.L.s in fifth year… I think other powerful wizards were good in Hogwarts too…”
 
