--- a/023.md
+++ b/023.md
@@ -51,7 +51,7 @@ Draco listened with his mouth open. How in Merlin’s name had the Muggles figur
 
 Draco nodded slowly. He’d never heard it explained that way before. There was a surprising beauty to how exactly it fit.
 
-*“But,*” Harry said. “That’s only *one* hypothesis. Suppose that instead there’s only a *single* place in the recipe that makes you a wizard. Only *one* place where a piece of paper can say ‘magic’ or ‘not magic’. And there are two copies of everything, always. So then there are only three possibilities. Both copies can say ‘magic’. One copy can say ‘magic’ and one copy can say ‘not magic’. Or both copies can say ‘not magic’. Wizards, Squibs, and Muggles. Muggleborns wouldn’t really be born to Muggles, they would be born to two Squibs, two parents each with one magic copy who’d grown up in the Muggle world. Now imagine a witch marries a Squib. Each child will get one paper saying ‘magic’ from the mother, always, it doesn’t matter which piece gets picked at random, both say ‘magic’. But like flipping a coin, half the time the child will get a paper saying ‘magic’ from the father, and half the time the child will get the father’s paper saying ‘not magic’. When a witch marries a Squib, the result won’t be a lot of weak wizarding children. Half the children will be wizards and witches just as powerful as their mother, and half the children will be Squibs. Because if there’s just *one* place in the recipe that makes you a wizard, then magic isn’t like a glass of pebbles that can mix. It’s like a single magical pebble, a sorcerer’s stone.”
+*“But,”* Harry said. “That’s only *one* hypothesis. Suppose that instead there’s only a *single* place in the recipe that makes you a wizard. Only *one* place where a piece of paper can say ‘magic’ or ‘not magic’. And there are two copies of everything, always. So then there are only three possibilities. Both copies can say ‘magic’. One copy can say ‘magic’ and one copy can say ‘not magic’. Or both copies can say ‘not magic’. Wizards, Squibs, and Muggles. Muggleborns wouldn’t really be born to Muggles, they would be born to two Squibs, two parents each with one magic copy who’d grown up in the Muggle world. Now imagine a witch marries a Squib. Each child will get one paper saying ‘magic’ from the mother, always, it doesn’t matter which piece gets picked at random, both say ‘magic’. But like flipping a coin, half the time the child will get a paper saying ‘magic’ from the father, and half the time the child will get the father’s paper saying ‘not magic’. When a witch marries a Squib, the result won’t be a lot of weak wizarding children. Half the children will be wizards and witches just as powerful as their mother, and half the children will be Squibs. Because if there’s just *one* place in the recipe that makes you a wizard, then magic isn’t like a glass of pebbles that can mix. It’s like a single magical pebble, a sorcerer’s stone.”
 
 Harry arranged three pairs of papers side by side. On one pair he wrote ‘magic’ and ‘magic’. On another pair he wrote ‘magic’ on the top paper only. And the third pair he left blank.
 
@@ -89,7 +89,7 @@ Draco’s mind was just blank.
 
 “Magical creatures, obviously,” said Draco without even thinking about it.
 
-Harry Potter slowly smiled. “Draco, that’s *brilliant.*”
+Harry Potter slowly smiled. “Draco, that’s *brilliant.”*
 
 *It’s the sort of dumb question you’d only ask in the first place if you’d been raised by Muggles.*
 
@@ -334,7 +334,7 @@ The first step was simply trying to turn the doorknob. Draco could have been blu
 
 Draco hadn’t been bluffing.
 
-*“Finite Incantatem.*” Harry’s voice came out rather hoarse, and he could feel that the spell hadn’t taken.
+*“Finite Incantatem.”* Harry’s voice came out rather hoarse, and he could feel that the spell hadn’t taken.
 
 So Harry tried it again, and that time it felt true. But another twist at the doorknob showed it hadn’t worked. No surprise there.
 
