--- a/025.md
+++ b/025.md
@@ -97,7 +97,7 @@ What method had the Dark Lord used? Come to think, the fact that the Dark Lord h
 
 Harry did not choke on his breakfast cereal. Instead he turned around and beheld Mr. Crabbe.
 
-“Excuse *me,*” said Harry. “Don’t you mean ‘Da boss wants ta talk wid youse?’”
+“Excuse *me,”* said Harry. “Don’t you mean ‘Da boss wants ta talk wid youse?’”
 
 Mr. Crabbe didn’t look happy. “Mr. Malfoy instructed me to speak properly.”
 
@@ -121,13 +121,13 @@ The old wizard stiffened in sudden horror. “Harry, *what have you done?”*
 
 There was a long quiet in the office, broken only by the tiny puffs and whistles of the fiddly things, which after enough time had come to seem like silence.
 
-“Dear me,” said the old wizard, “I *do* feel silly. And *here* I was expecting you might try to redeem the heir of Malfoy by, say, *showing him true friendship and kindness.*”
+“Dear me,” said the old wizard, “I *do* feel silly. And *here* I was expecting you might try to redeem the heir of Malfoy by, say, *showing him true friendship and kindness.”*
 
 *“Ha!* Yeah, like *that* would have worked.”
 
 The old wizard sighed. This was taking it too far. “Tell me, Harry. Did it even *occur* to you that there was something *incongruous* about setting out to redeem someone through lies and trickery?”
 
-“I did it without telling any direct lies, and since we’re talking about Draco Malfoy here, I think the word you’re looking for is *congruous.*” The boy looked rather smug.
+“I did it without telling any direct lies, and since we’re talking about Draco Malfoy here, I think the word you’re looking for is *congruous.”* The boy looked rather smug.
 
 The old wizard shook his head in despair. “And *this* is the hero. We’re all doomed.”
 
@@ -277,7 +277,7 @@ Grins slowly started on the faces of Fred and George.
 
 “Start rumours about ourselves,” they replied.
 
-*“Exactly,*” said Harry, grinning widely. “But these can’t be just *any* rumours. I want to teach people never to believe what the newspaper says about Harry Potter, any more than Muggles believe what the newspaper says about Elvis. At first I just thought about flooding Rita Skeeter with so many rumours that she wouldn’t know what to believe, but then she’ll just cherry-pick the ones that sound plausible and bad. So what I want you to do is create a fake story about me, and get Rita Skeeter to believe it somehow. But it has to be something that, afterward, everyone will *know* was fake. We want to fool Rita Skeeter and her editors, and *afterward* have the proof come out that it was false. And of course—given that those are the requirements—the story has to be as *ridiculous* as it can possibly be, and still get printed. Do you understand what I want you to do?”
+*“Exactly,”* said Harry, grinning widely. “But these can’t be just *any* rumours. I want to teach people never to believe what the newspaper says about Harry Potter, any more than Muggles believe what the newspaper says about Elvis. At first I just thought about flooding Rita Skeeter with so many rumours that she wouldn’t know what to believe, but then she’ll just cherry-pick the ones that sound plausible and bad. So what I want you to do is create a fake story about me, and get Rita Skeeter to believe it somehow. But it has to be something that, afterward, everyone will *know* was fake. We want to fool Rita Skeeter and her editors, and *afterward* have the proof come out that it was false. And of course—given that those are the requirements—the story has to be as *ridiculous* as it can possibly be, and still get printed. Do you understand what I want you to do?”
 
 “Not exactly...” Fred or George said slowly. “You want us to *invent* the story?”
 
@@ -333,7 +333,7 @@ Harry coughed gently. “You didn’t ask about your budget.”
 
 *Budget?* they thought.
 
-“I could just tell you the amount,” Harry said. “But I think *this* will be more *inspiring.*”
+“I could just tell you the amount,” Harry said. “But I think *this* will be more *inspiring.”*
 
 Harry’s hands dipped into his robe, and brought forth—
 
@@ -349,7 +349,7 @@ Harry frowned at them. “But I’m asking you to put in some real work here. A 
 
 Fred and George shook their heads.
 
-“Fine,” Harry said. “I’ll just get you expensive Christmas presents, and if you try returning them to me I’ll burn them. Now you don’t even *know* how much I’m going to spend on you, except, obviously, that it’s going to be more than if you’d just taken the money. And I’m going to buy you those presents *anyway,* so think about *that* before you tell me *you can’t think of anything awesome.*”
+“Fine,” Harry said. “I’ll just get you expensive Christmas presents, and if you try returning them to me I’ll burn them. Now you don’t even *know* how much I’m going to spend on you, except, obviously, that it’s going to be more than if you’d just taken the money. And I’m going to buy you those presents *anyway,* so think about *that* before you tell me *you can’t think of anything awesome.”*
 
 Harry stood up, smiling, and turned to go while Fred and George were still gaping in shock. He strode a few steps away, and then turned back.
 
@@ -421,11 +421,11 @@ The twins got a thoughtful look on their face.
 
 “That could use up Harry’s budget pretty fast,” said Fred. “This is a lot of money for us, but it’s not a lot of money for someone like Flume.”
 
-“Maybe people will give discounts if they know it’s for Harry,” said George. “But most importantly of all, whatever we do, it has to be *impossible.*”
+“Maybe people will give discounts if they know it’s for Harry,” said George. “But most importantly of all, whatever we do, it has to be *impossible.”*
 
 Fred blinked. “What do you mean, *impossible?”*
 
-“So impossible that we don’t get in trouble, because no one believes we could have done it. So impossible that even Harry starts wondering. It has to be surreal, it has to make people doubt their own sanity, it has to be... *better than Harry.*”
+“So impossible that we don’t get in trouble, because no one believes we could have done it. So impossible that even Harry starts wondering. It has to be surreal, it has to make people doubt their own sanity, it has to be... *better than Harry.”*
 
 Fred’s eyes were wide in astonishment. This happened sometimes, between them, but not often. “But why?”
 
@@ -433,7 +433,7 @@ Fred’s eyes were wide in astonishment. This happened sometimes, between them, 
 
 “He’s the Boy-Who-Lived,” said Fred.
 
-“And *we’re* the Weasley twins! He’s *challenging* us. He said we could do what he does. But I bet he doesn’t think we’ll ever be as good as *him.*”
+“And *we’re* the Weasley twins! He’s *challenging* us. He said we could do what he does. But I bet he doesn’t think we’ll ever be as good as *him.”*
 
 “He’s right,” said Fred, feeling rather nervous. The Weasley twins did *sometimes* disagree even when they had all the same information, but every time they did it seemed unnatural, like at least one of them must be doing something wrong. “This is *Harry Potter* we’re talking about. He can do the impossible. We can’t.”
 
@@ -443,7 +443,7 @@ Fred’s eyes were wide in astonishment. This happened sometimes, between them, 
 
 “It’s what Godric Gryffindor would do,” said George.
 
-That settled it, and the twins snapped back into... whatever it was that was normal for them.
+That settled it, and the twins snapped back into… whatever it was that was normal for them.
 
 “All right, then—”
 
