--- a/026.md
+++ b/026.md
@@ -41,7 +41,7 @@ And the fury on Professor Quirrell’s face was no longer contained. “Why both
 
 “Are you *serious?”* Harry said before he could stop himself.
 
-“No, I’m in a terrible mood today for no particular reason. *Yes I’m serious, you fool!* He didn’t know. He *actually didn’t know.* I didn’t believe it until the Aurors confirmed it under Veritaserum. He is in his *sixth year at Hogwarts* and he cast a high-level Dark curse *without knowing what it did.*”
+“No, I’m in a terrible mood today for no particular reason. *Yes I’m serious, you fool!* He didn’t know. He *actually didn’t know.* I didn’t believe it until the Aurors confirmed it under Veritaserum. He is in his *sixth year at Hogwarts* and he cast a high-level Dark curse *without knowing what it did.”*
 
 “You don’t mean,” Harry said, “that he was *mistaken* about what it did, that he somehow read the wrong spell description—”
 
@@ -59,7 +59,7 @@ There was a pause. Professor Quirrell leaned forward and picked up the silver in
 
 “Was the sixth-year Gryffindor raised by Muggles?”
 
-*“Yes.*”
+*“Yes.”*
 
 “Is Dumbledore refusing to expel him because the poor boy didn’t know?”
 
@@ -81,7 +81,7 @@ The inkwell went on screaming and burning in Professor Quirrell’s hands, tiny 
 
 Harry opened his mouth—
 
-“If you’re about to say you’re not scared of me,” said Professor Quirrell, *“don’t.*”
+“If you’re about to say you’re not scared of me,” said Professor Quirrell, *“don’t.”*
 
 “You are the scariest person I know,” Harry said, “and one of the top reasons for that is your control. I simply can’t imagine hearing that you’d hurt someone you had not made a deliberate decision to hurt.”
 
@@ -233,7 +233,7 @@ They walked in silence for thirty seconds before Professor Quirrell spoke. “Mi
 
 “Yes.”
 
-“The *original proceedings of the Wizengamot.*”
+“The *original proceedings of the Wizengamot.”*
 
 “Yes.”
 
@@ -257,7 +257,7 @@ They walked in silence for thirty seconds before Professor Quirrell spoke. “Mi
 
 “He didn’t have any choice,” said Harry. “Not if he wanted to fulfill the conditions of the prophecy.”
 
-*“Give me that,*” said Professor Quirrell, and the newspaper leaped out of Harry’s hand so fast that he got a paper cut.
+*“Give me that,”* said Professor Quirrell, and the newspaper leaped out of Harry’s hand so fast that he got a paper cut.
 
 Harry automatically put the finger in his mouth to suck on, feeling rather shocked, and turned to remonstrate with Professor Quirrell—
 
@@ -363,7 +363,7 @@ The waitress, clad in robes that still looked severe and formal while being rath
 
 Professor Quirrell waved a hand in the direction of the door, and a bolt slid shut. “Note the bolt on the inside. This room, Mr. Potter, is known as Mary’s Room. It happens to be proof against all scrying, and I do mean *all;* Dumbledore himself could detect nothing of what happens here. Mary’s Room is used by two kinds of people. The first sort are engaged in illicit dalliances. And the second sort lead interesting lives.”
 
-*“Really,*” said Harry.
+*“Really,”* said Harry.
 
 Professor Quirrell nodded.
 
