--- a/038.md
+++ b/038.md
@@ -11,7 +11,7 @@ Harry took out his wizards’ robes, shrugged them on.
 
 And finally, Harry drew his wand; and he couldn’t help thinking of the parents he’d only just kissed goodbye, of the world whose problems he was leaving behind…
 
-With a strange feeling of guilt for the unavoidable, Harry said, *“Thermos.*”
+With a strange feeling of guilt for the unavoidable, Harry said, *“Thermos.”*
 
 The warmth flowed through him.
 
@@ -114,7 +114,7 @@ A thin trace of a smile moved over Lucius’s lips. “Yes, that does sound like
 
 “Indeed,” said Harry. “It is part of my game with Draco, and no work of Dumbledore’s, and that is all I will say.”
 
-“Let us dispense with games,” said the senior Malfoy, the grey eyes suddenly hardening. “If my suspicions are true, you would hardly do Dumbledore’s bidding in any case, *Mr. Potter.*”
+“Let us dispense with games,” said the senior Malfoy, the grey eyes suddenly hardening. “If my suspicions are true, you would hardly do Dumbledore’s bidding in any case, *Mr. Potter.”*
 
 There was a slight pause.
 
