--- a/039.md
+++ b/039.md
@@ -287,7 +287,7 @@ Toot. Beep. Thud.
 
 “Harry,” whispered Dumbledore. Water glittered in the old wizard’s eyes. He took a step closer across the office—
 
-“And *then,*” spat Harry, the fury coming fully into his voice, the cold rage at the universe for being like that and at himself for being so stupid, “I asked Hermione and she said that they were just *afterimages,* burned into the stone of the castle by the death of a wizard, like the silhouettes left on the walls of Hiroshima. And I should have known! I should have known without even having to ask! I shouldn’t have believed it even for all of thirty seconds! Because if people had souls there wouldn’t be any such thing as brain damage, if your soul could go on speaking after your whole brain was gone, how could damage to the left cerebral hemisphere take away your ability to talk? And Professor McGonagall, when she told me about how my parents had died, she didn’t act like they’d just gone away on a long trip to another country, like they’d emigrated to Australia back in the days of sailing ships, which is the way people would act if they *actually knew* that death was just going somewhere else, if they had hard evidence for an afterlife, instead of making stuff up to console themselves, it would change *everything,* it wouldn’t *matter* that everyone had lost someone in the war, it would be a little sad but not *horrible!* And I’d already seen that people in the wizarding world didn’t act like that! So I should have known better! And that was when I knew that my parents were really dead and gone forever and ever, that there wasn’t anything left of them, that I’d never get a chance to meet them and, and, and the other children thought I was crying because I was *scared of ghosts—*”
+“And *then,”* spat Harry, the fury coming fully into his voice, the cold rage at the universe for being like that and at himself for being so stupid, “I asked Hermione and she said that they were just *afterimages,* burned into the stone of the castle by the death of a wizard, like the silhouettes left on the walls of Hiroshima. And I should have known! I should have known without even having to ask! I shouldn’t have believed it even for all of thirty seconds! Because if people had souls there wouldn’t be any such thing as brain damage, if your soul could go on speaking after your whole brain was gone, how could damage to the left cerebral hemisphere take away your ability to talk? And Professor McGonagall, when she told me about how my parents had died, she didn’t act like they’d just gone away on a long trip to another country, like they’d emigrated to Australia back in the days of sailing ships, which is the way people would act if they *actually knew* that death was just going somewhere else, if they had hard evidence for an afterlife, instead of making stuff up to console themselves, it would change *everything,* it wouldn’t *matter* that everyone had lost someone in the war, it would be a little sad but not *horrible!* And I’d already seen that people in the wizarding world didn’t act like that! So I should have known better! And that was when I knew that my parents were really dead and gone forever and ever, that there wasn’t anything left of them, that I’d never get a chance to meet them and, and, and the other children thought I was crying because I was *scared of ghosts—”*
 
 The old wizard’s face was horrified, he opened his mouth to speak—
 
@@ -361,7 +361,7 @@ Albus Percival Wulfric Brian Dumbledore just stood there and stared at Harry wit
 
 “Bwa ha ha!” said Harry.
 
-The old wizard’s face was tight with anger and worry. “Voldemort stole the book from which he gleaned his secret; it was not there when I went to look for it. But this much I know, and this much I will tell you: his immortality was born of a ritual terrible and Dark, blacker than pitchest black! And it was Myrtle, poor sweet Myrtle, who died for it; his immortality took sacrifice, it took *murder—*”
+The old wizard’s face was tight with anger and worry. “Voldemort stole the book from which he gleaned his secret; it was not there when I went to look for it. But this much I know, and this much I will tell you: his immortality was born of a ritual terrible and Dark, blacker than pitchest black! And it was Myrtle, poor sweet Myrtle, who died for it; his immortality took sacrifice, it took *murder—”*
 
 “Well *obviously* I’m not going to popularise a method of immortality that requires killing people! That would defeat the *entire point!”*
 
@@ -369,7 +369,7 @@ There was a startled pause.
 
 Slowly the old wizard’s face relaxed out of its anger, though the worry was still there. “You would use no ritual requiring human sacrifice.”
 
-“I don’t know what you take me for, *Headmaster,*” Harry said coldly, his own anger rising, “but let’s not forget that *I’m* the one who wants people to *live!* The one who wants to *save* everyone! *You’re* the one who thinks death is awesome and everyone ought to die!”
+“I don’t know what you take me for, *Headmaster,”* Harry said coldly, his own anger rising, “but let’s not forget that *I’m* the one who wants people to *live!* The one who wants to *save* everyone! *You’re* the one who thinks death is awesome and everyone ought to die!”
 
 “I am at a loss, Harry,” said the old wizard. His feet once more began trudging across his strange office. “I know not what to say.” He picked up a crystal ball that seemed to hold a hand in flames, looked into it with a sad expression. “Only that I am greatly misunderstood by you… I don’t *want* everyone to die, Harry!”
 
@@ -385,7 +385,7 @@ The old wizard’s face was peaceful. “I am not perfect, Harry, but I think I 
 
 “No, Harry,” the old wizard said. His face was gentle, his hand trailed through a lighted pool of water that made small musical chimes as his fingers stirred it. “Though I can understand how you must think so.”
 
-“Do you want to understand the Dark Wizard?” Harry said, his voice now hard and grim. “Then look within the part of yourself that flees not from death but from the *fear* of death, that finds that fear so unbearable that it will embrace Death as a friend and cozen up to it, try to become one with the night so that it can think itself master of the abyss. You have taken the most terrible of all evils and called it good! With only a slight twist that same part of yourself would murder innocents, and call it friendship. If you can call death better than life then you can twist your moral compass to point *anywhere—*”
+“Do you want to understand the Dark Wizard?” Harry said, his voice now hard and grim. “Then look within the part of yourself that flees not from death but from the *fear* of death, that finds that fear so unbearable that it will embrace Death as a friend and cozen up to it, try to become one with the night so that it can think itself master of the abyss. You have taken the most terrible of all evils and called it good! With only a slight twist that same part of yourself would murder innocents, and call it friendship. If you can call death better than life then you can twist your moral compass to point *anywhere—”*
 
 “I think,” said Dumbledore, shaking water droplets from his hand to the sound of tiny tinkling bells, “that you understand Dark Wizards *very* well, without yet being one yourself.” It was said in perfect seriousness, and without accusation. “But your comprehension of *me*, I fear, is sorely lacking.” The old wizard was smiling now, and there was a gentle laughter in his voice.
 
