--- a/041.md
+++ b/041.md
@@ -289,7 +289,7 @@ There was a stunned pause.
 
 “You can’t *do* that!” said Charlotte.
 
-“She’s a *mudblood,*” said Pansy, sounding confused. “Of *course* he let
+“She’s a *mudblood,”* said Pansy, sounding confused. “Of *course* he let
 go!”
 
 “Well, Malfoy shouldn’t have grabbed her in the first place, then!” said
