--- a/046.md
+++ b/046.md
@@ -167,7 +167,7 @@ Everyone else was also looking at Daphne, now.
 
 “Oh, yeah,” said Daphne, “Harry shoved her away and shouted, ‘I told you, no kissing!’ Then Harry screamed like he was dying and Fawkes started singing to him—I’m not sure which one of those happened first, actually—”
 
-“That doesn’t sound like true love to *me,*” said the Carrow twins. “That sounds like the *wrong person* kissed him.”
+“That doesn’t sound like true love to *me,”* said the Carrow twins. “That sounds like the *wrong person* kissed him.”
 
 “It was supposed to be *me*,” whispered Tracey. Her face was still stunned. *“I* was supposed to be his true love. Harry Potter was *my* general. I should’ve, I should’ve fought Granger for him—”
 
