--- a/047.md
+++ b/047.md
@@ -441,7 +441,7 @@ It would be illegal, and since he’d have to do it without Father’s help, it 
 
 “Draco, I’m an Occlumens—”
 
-*“OH THAT IS SUCH A LIE—*”
+*“OH THAT IS SUCH A LIE—”*
 
 “I was trained by Mr. Bester. Professor Quirrell set it up. Look, Draco, I’ll *take* one drop of Veritaserum if you can get it, I’m just *warning* you that I’m an Occlumens. Not a perfect Occlumens, but Mr. Bester said I was putting up a complete block, and I could probably beat Veritaserum.”
 
