--- a/049.md
+++ b/049.md
@@ -109,7 +109,7 @@ Professor Quirrell was smiling. “Why not just write the secret down?”
 
 “Easy enough to key the wards on the Chamber to a phrase spoken in Parseltongue. Why go to the trouble of creating Slytherin’s Monster? It cannot have been easy to create a creature with a lifespan of centuries. Come, Mr. Potter, it should be obvious; what are the secrets that can be told from one living mind to another, but never written down?”
 
-Harry saw it then, with a burst of adrenaline that started his heart racing, his breath coming faster. *“Oh.*”
+Harry saw it then, with a burst of adrenaline that started his heart racing, his breath coming faster. *“Oh.”*
 
 Salazar Slytherin had been very cunning indeed. Cunning enough to come up with a way to bypass the Interdict of Merlin.
 
@@ -187,49 +187,49 @@ At the other end of the room swayed a snake a meter high, bright green and intri
 
 The constant sense of doom had diminished, ironically enough, after the defence Professor of Hogwarts had turned into a venomous snake.
 
-Harry swallowed hard and said, “Greetings—ah, hssss, no, ah, *greetingss.*”
+Harry swallowed hard and said, “Greetings—ah, hssss, no, ah, *greetingss.”*
 
-*“Sso,*” hissed the snake. *“You sspeak, I hear. I sspeak, you hear?”*
+*“Sso,”* hissed the snake. *“You sspeak, I hear. I sspeak, you hear?”*
 
-*“Yess, I hear,*” hissed Harry. *“You are an Animaguss?”*
+*“Yess, I hear,”* hissed Harry. *“You are an Animaguss?”*
 
-*“Obvioussly,*” hissed the snake. *“Thirty-sseven ruless, number thirty-four: Become Animaguss. All ssensible people do, if can. Thuss,* *very rare.*” The snake’s eyes were flat surfaces ensconced within dark pits, sharp black pupils in dark gray fields. *“This iss mosst ssecure way to sspeak. You ssee? No otherss undersstand uss.*”
+*“Obvioussly,”* hissed the snake. *“Thirty-sseven ruless, number thirty-four: Become Animaguss. All ssensible people do, if can. Thuss,* *very rare.”* The snake’s eyes were flat surfaces ensconced within dark pits, sharp black pupils in dark gray fields. *“This iss mosst ssecure way to sspeak. You ssee? No otherss undersstand uss.”*
 
 *“Even if they are ssnake Animagi?”*
 
-*“Not unlesss heir of Sslytherin willss.*” The snake gave a series of short hisses which Harry’s brain translated as sardonic laughter. ” *Sslytherin not sstupid. Ssnake Animaguss not ssame as Parsselmouth. Would be huge flaw in sscheme.*”
+*“Not unlesss heir of Sslytherin willss.”* The snake gave a series of short hisses which Harry’s brain translated as sardonic laughter. ” *Sslytherin not sstupid. Ssnake Animaguss not ssame as Parsselmouth. Would be huge flaw in sscheme.”*
 
 Well *that* definitely argued that Parseltongue was personal magic, not snakes being sentient beings with a learnable language—
 
-*“I am not regisstered,*” hissed the snake. The dark pits of its eyes stared at Harry. *“Animaguss musst be regisstered. Penalty is two yearss imprissonment. Will you keep my ssecret, boy?”*
+*“I am not regisstered,”* hissed the snake. The dark pits of its eyes stared at Harry. *“Animaguss musst be regisstered. Penalty is two yearss imprissonment. Will you keep my ssecret, boy?”*
 
-*“Yess,*” hissed Harry. *“Would never break promisse.*”
+*“Yess,”* hissed Harry. *“Would never break promisse.”*
 
-The snake seemed to hold still, as though in shock, and then began to sway again. *“We come here next in sseven dayss. Bring cloak to passs unsseen, bring hourglasss to move through time—*”
+The snake seemed to hold still, as though in shock, and then began to sway again. *“We come here next in sseven dayss. Bring cloak to passs unsseen, bring hourglasss to move through time—”*
 
-*“You know?”* hissed Harry in shock. *“How—*”
+*“You know?”* hissed Harry in shock. *“How—”*
 
-Again the series of short quick hisses that translated as sardonic laughter. *“You arrive in my firsst classs while sstill in other classs, sstrike down enemy with pie, two ballss of memory—*”
+Again the series of short quick hisses that translated as sardonic laughter. *“You arrive in my firsst classs while sstill in other classs, sstrike down enemy with pie, two ballss of memory—”*
 
-*“Never mind,*” hissed Harry. *“Sstupid question, forgot you were ssmart.*”
+*“Never mind,”* hissed Harry. *“Sstupid question, forgot you were ssmart.”*
 
-*“Foolissh thing to forget,*” said the snake, but the hiss did not seem offended.
+*“Foolissh thing to forget,”* said the snake, but the hiss did not seem offended.
 
-*“Hourglasss is resstricted,*” Harry said. *“Cannot usse until ninth hour.*”
+*“Hourglasss is resstricted,”* Harry said. *“Cannot usse until ninth hour.”*
 
 The snake twitched its head, a snakish nod. *“Many resstrictionss. Locked to your usse only, cannot be sstolen. Cannot transsport other humanss. But ssnake carried in pouch, I ssuspect will go with. Think posssible to hold hourglasss motionlesss within sshell, without dissturbing wardss, while you turn sshell around it. We will tesst in sseven dayss. Will not sspeak of planss beyond thiss. You ssay nothing, to no one. Give no ssign of expectancy, none. Undersstand?”*
 
 Harry nodded.
 
-*“Ansswer in sspeech.*”
+*“Ansswer in sspeech.”*
 
-*“Yess.*”
+*“Yess.”*
 
 *“Will do as I ssaid?”*
 
-*“Yess. But,”* Harry gave a wobbling rasp that was how his mind had translated a hesitant ‘Ahhh’ into snakish, *“I do not promisse to do whatever thiss iss, you have not ssaid—*”
+*“Yess. But,”* Harry gave a wobbling rasp that was how his mind had translated a hesitant ‘Ahhh’ into snakish, *“I do not promisse to do whatever thiss iss, you have not ssaid—”*
 
-The snake performed a shiver that Harry’s mind translated as a severe glare. *“Of coursse not. Will disscusss sspecificss at next meeting.*”
+The snake performed a shiver that Harry’s mind translated as a severe glare. *“Of coursse not. Will disscusss sspecificss at next meeting.”*
 
 The blur and motion reversed itself, and Professor Quirrell was standing there once more. For a moment the defence Professor himself seemed to sway, as the snake had swayed, and his eyes seemed cold and flat; and then his shoulders straightened and he was human once more.
 
