--- a/054.md
+++ b/054.md
@@ -186,7 +186,7 @@ Harry pressed his wand against the side of the metal step just above him. If he 
 
 Thirty seconds later Harry was the proud new owner of a curved mirror, and…
 
-*“Wingardium Leviosa,*” Harry whispered as quietly as he could.
+*“Wingardium Leviosa,”* Harry whispered as quietly as he could.
 
 …was levitating it just above the steps, and watching, in that curved surface, almost the whole corridor where Professor Quirrell invisibly waited.
 
@@ -206,7 +206,7 @@ But the Auror halted after taking three steps into the corridor.
 
 The form of the sallow, bearded man became visible then.
 
-“And you with the Patronus,” said the hard voice. “Come out too. *Now.*”
+“And you with the Patronus,” said the hard voice. “Come out too. *Now.”*
 
 “Wouldn’t be smart,” said the gravelly voice of the sallow man. It was no longer the terrified voice of the Dark Lord’s servant; it had suddenly become the professional intimidation of a competent criminal. “You don’t want to see who’s behind me. Trust me, you don’t. Five hundred Galleons, cold cash up front, if you turn around and walk away. Big trouble for your career if you don’t.”
 
