--- a/055.md
+++ b/055.md
@@ -209,7 +209,7 @@ The emaciated form that was Bellatrix Black was resting motionless on the stairs
 
 A brief twitch of panic was countered by the thought that Professor Quirrell had knocked her out to prevent her from hearing the Dark Lord’s cringing servant suddenly turn into a hardened criminal and then an expert battlemage. Which was good, because she wouldn’t have heard Harry’s voice saying ‘Expecto Patronum’.
 
-Harry drew back the hood of the Cloak, pointed his wand at Bellatrix, and whispered as gently as he could, *“Innervate.*”
+Harry drew back the hood of the Cloak, pointed his wand at Bellatrix, and whispered as gently as he could, *“Innervate.”*
 
 From the way Bellatrix’s body jerked a little, Harry didn’t think he’d managed to get it quite gentle enough.
 
@@ -239,7 +239,7 @@ Even her own blood froze for an instant, as the corpse parted its lips, and gurg
 
 Harry watched, now fully invisible once more, as Bellatrix slowly leaned down, took Professor Quirrell’s wand (which Harry dared not touch), and slowly straightened again.
 
-Then Bellatrix pointed the wand at the snake, and said, her voice precise though it was still a whisper, *“Innervate.*”
+Then Bellatrix pointed the wand at the snake, and said, her voice precise though it was still a whisper, *“Innervate.”*
 
 The snake did not stir.
 
@@ -251,7 +251,7 @@ Bellatrix paused, and then said, hesitantly, “I think so, my Lord.”
 
 “Eliminate that Auror’s last half-hour of memory,” Harry commanded. He’d thought a bit about whether he wanted to provide any justification for that, what he would say if Bellatrix asked why they weren’t just killing him, in which case Harry would explain that they were pretending to be a different power group and then tell her to shut up—
 
-But Bellatrix simply pointed her wand at the Auror, stood silently for a time, and finally whispered, *“Obliviate.*”
+But Bellatrix simply pointed her wand at the Auror, stood silently for a time, and finally whispered, *“Obliviate.”*
 
 She swayed, then, but did not fall.
 
