--- a/059.md
+++ b/059.md
@@ -236,7 +236,7 @@ The witch’s head twitched up, to look at where that voice had seemed to speak 
 
 “That would be the Animagus,” whispered Harry’s lips. *Oh,* thought the Harry behind glass, listening to the sound of his own lips, *that makes sense; Professor Quirrell must have used a different name.*
 
-“Since when is *he* a—bah, forget it.” The witch laid her wand on the snake’s nose for a moment, then shook her head sharply. “Nothing wrong with him that a day’s rest won’t cure. *Her…*”
+“Since when is *he* a—bah, forget it.” The witch laid her wand on the snake’s nose for a moment, then shook her head sharply. “Nothing wrong with him that a day’s rest won’t cure. *Her…”*
 
 “Can you wake him up now?” whispered Harry’s lips. *Is that a good idea?* thought Harry, but his lips definitely seemed to think so.
 
@@ -244,7 +244,7 @@ Again the sharp headshake. “If an Innervate didn’t work on him—” began t
 
 “I did not attempt one,” whispered Harry’s lips.
 
-“What? Why—oh, never mind. *Innervate.*”
+“What? Why—oh, never mind. *Innervate.”*
 
 There was a pause, and then a snake slowly crawled out of its harness. Slowly the green head came up, looked around.
 
