--- a/061.md
+++ b/061.md
@@ -142,7 +142,7 @@ Somehow she knew, she knew before he even said it, and she wanted to scream at t
 
 —and said, “Quirinus Quirrell.”
 
-*“Why,*” she said, in a voice that should have melted half the devices in the office, *“did Mr. Potter even TELL our Defense Professor about his brilliant new Charm for breaking out of prisons—*”
+*“Why,”* she said, in a voice that should have melted half the devices in the office, *“did Mr. Potter even TELL our Defense Professor about his brilliant new Charm for breaking out of prisons—”*
 
 The Headmaster passed a weary wrinkled hand across his equally wrinkled forehead. “Quirinus just happened to be there, Minerva. Even I saw no harm in it at the time.” The Headmaster hesitated. “And Harry said his Charm was too dangerous to be explained to either of us; and when I asked him again, this day, he insisted he had still not explained it to Quirinus, nor had he ever dropped his Occlumency barriers in the Defense Professor’s presence—”
 
@@ -226,7 +226,7 @@ It was only a few minutes later that Severus spun back out of the Floo, brushing
 
 She and Albus exchanged glances.
 
-“Severus,” Minerva said, *“surely…* even *Harry*… has more common sense than *that…*”
+“Severus,” Minerva said, *“surely…* even *Harry*… has more common sense than *that…”*
 
 Her voice trailed off.
 
