--- a/064.md
+++ b/064.md
@@ -87,7 +87,7 @@ THE WITCH AND THE WARDROBE
 
 With a critical eye, Peter looked over the encamped Centaurs with their bows, Beavers with their long daggers, and talking Bears with their chain-mail draped over them. He was in charge, because he was one of the mythical Sons of Adam and had declared himself High King of Narnia; but the truth was he didn’t really know much about encampments, weapons, and guard patrols. In the end all he could see was that they all looked proud and confident, and Peter had to hope they were right about that; because if you couldn’t believe in your own people, you couldn’t believe in anyone.
 
-“They’d scare *me*, if I had to fight ’em,” Peter said finally, “but I don’t know if it’s enough to beat… *her.*”
+“They’d scare *me*, if I had to fight ’em,” Peter said finally, “but I don’t know if it’s enough to beat… *her.”*
 
 “You don’t suppose this mysterious lion will actually show up and help us, d’you?” said Lucy. Her voice was very quiet, so that none of the creatures around them would hear. “Only it’d be nice to really have him, don’t you think, instead of just letting people think that he put us in charge?”
 
@@ -161,7 +161,7 @@ ERDŐS IN CHAINS
 
 “I’m the *head of her institute*,” Richard growled. I could feel the waves of science radiating off him; he was angry. “I *have* to work with Sylvie, it doesn’t mean anything! I thought our own research was special, Anita!”
 
-“It *is,*” I said, feeling helpless about my inability to explain things to Richard. He didn’t understand the thrill of being a polymath, the new worlds that were opening up to me. “I didn’t share *our* research with anyone—”
+“It *is,”* I said, feeling helpless about my inability to explain things to Richard. He didn’t understand the thrill of being a polymath, the new worlds that were opening up to me. “I didn’t share *our* research with anyone—”
 
 “But you wanted to,” said Richard.
 
