--- a/068.md
+++ b/068.md
@@ -143,7 +143,7 @@ Hermione nodded.
 
 Dumbledore closed his eyes, and when he opened them, he looked a little older than before. “No one can stop you, Miss Granger, if you choose to stop being Harry’s friend. As for what it would do to him, you may know that better than I.”
 
-“That—doesn’t seem *fair,*” Hermione said, her voice trembling. “That I’ve *got* to be Harry’s friend because he’s got no one else? That doesn’t seem fair.”
+“That—doesn’t seem *fair,”* Hermione said, her voice trembling. “That I’ve *got* to be Harry’s friend because he’s got no one else? That doesn’t seem fair.”
 
 *“Being* a friend is not something you can be forced to, Miss Granger.” The blue eyes seemed to look right through her. “The feelings are there, or they are not. If they are there, you can accept them or deny them. You *are* Harry’s friend—and choosing to deny it would wound him terribly, perhaps beyond healing. But Miss Granger, what would drive you to such extremes?”
 
@@ -157,7 +157,7 @@ Hermione shook her head rapidly. “But that’s *not*—” She’d known she w
 
 The hot burning feeling was creeping up her throat again, along with helplessness, she didn’t understand why Professor McGonagall had brought her here if the Headmaster wasn’t going to help, and from a glance at Professor McGonagall’s face, it looked like Professor McGonagall also wasn’t sure now that it had been a good idea.
 
-“I don’t want to be a hero,” said Hermione Granger, “I don’t want to be a hero’s companion, I just want to be *me.*”
+“I don’t want to be a hero,” said Hermione Granger, “I don’t want to be a hero’s companion, I just want to be *me.”*
 
 (The thought came to her a few seconds later that maybe she *did* in fact want to be a hero, but she decided not to change what she’d said.)
 
@@ -197,7 +197,7 @@ She thought about it some more.
 
 The old wizard shook his head. “I have helped him little enough, Miss Granger. And if you are asking me for a quest—” The old wizard smiled again, rather wryly. “Miss Granger, you are in your first year of Hogwarts. Do not be too eager to grow up; there will be time enough for that later.”
 
-“I’m twelve. Harry’s *eleven.*”
+“I’m twelve. Harry’s *eleven.”*
 
 “Harry Potter is special,” said the old wizard. “As you know, Miss Granger.” The blue eyes were suddenly piercing beneath the half-moon glasses, and she was reminded of the day of the Dementor when Dumbledore’s voice had said, inside her mind, that he knew about Harry’s dark side.
 
