--- a/073.md
+++ b/073.md
@@ -26,7 +26,7 @@ Harry had divided up eight of his soldiers among the other armies, as ordered; h
 
 Nobody had figured out yet what Draco Malfoy was plotting.
 
-*“Certain?” said Harry Potter, sounding rather reluctant. “You know a rationalist isn’t ever certain of anything, Hermione, not even that two and two make four. I can’t actually read Malfoy’s mind, and if I could, I couldn’t be certain he wasn’t a perfect Occlumens. All I can say is that based on what I’ve seen of Malfoy, it’s a lot more plausible than Daphne Greengrass thinks, that he actually is trying to show the Slytherins a better way. We should… we really should try to go along with that, Hermione.*”
+*“Certain?” said Harry Potter, sounding rather reluctant. “You know a rationalist isn’t ever certain of anything, Hermione, not even that two and two make four. I can’t actually read Malfoy’s mind, and if I could, I couldn’t be certain he wasn’t a perfect Occlumens. All I can say is that based on what I’ve seen of Malfoy, it’s a lot more plausible than Daphne Greengrass thinks, that he actually is trying to show the Slytherins a better way. We should… we really should try to go along with that, Hermione.”*
 
 (Well, Harry seemed to think Draco Malfoy was a good guy. But then the trouble was that Harry also tended to trust people like Professor Quirrell.)
 
@@ -142,7 +142,7 @@ Jugson smiled, then. “It could be funny,” said the sixth-year junior Death E
 
 “Nope,” said the young voice of Susan Bones, “not going to happen,” and with a blindingly fast motion the Hufflepuff girl leapt leftward just as a red stunbolt erupted from Belka’s wand, Daphne could hardly *see* the movement as Susan seemed to hit the corridor wall and then bounce off it like she was a rubber ball and her legs smashed into Jugson’s *face*, it didn’t go through the shield but the sixth-year went sprawling backward with the impact and Susan followed him downward and her foot stamped down on the boy’s wand arm, again being repelled by the shield, *“Elmekia!”* shouted Lee and Parvati shouted *“Prismatis!”* and the rainbow wall formed but the fiery blue blast passed right through it like it wasn’t even there, the bolt missed Susan by inches, there was a whirlwind of motion that Daphne couldn’t follow during which Belka had her feet knocked out from under her, but the older witch just rolled back to a stand and then—
 
-Daphne saw it coming, and her lips started to mouth *“Pris-*” but it was already too late.
+Daphne saw it coming, and her lips started to mouth *“Pris-”* but it was already too late.
 
 Three blasts of brilliance slammed into Susan at once, she had her wand raised as though she could counter them and there was a white flash as the hexes struck the magical wood, but then Susan’s legs convulsed and sent her flying into a corridor wall. Her head hit with a strange cracking sound, and then Susan fell down and lay motionless with her head at an odd-seeming angle, her wand still clutched in one outstretched hand.
 
@@ -156,7 +156,7 @@ Parvati scrambled over to where Susan lay, pressed a thumb over the pulse point 
 
 “You had me going for a second there, dearies.” The seventh-year girl wasn’t smiling at all.
 
-*“Tonare!”* screamed Daphne, raising her wand above her head and focusing harder than she ever had in her life. *“Rava calvaria! Lucis—*”
+*“Tonare!”* screamed Daphne, raising her wand above her head and focusing harder than she ever had in her life. *“Rava calvaria! Lucis—”*
 
 She didn’t even see the hex that got her.
 
@@ -294,7 +294,7 @@ Slowly, Hermione was beginning to feel a bit more together. It hadn’t really b
 
 “Just a minute, please,” said Hermione. Maybe her mind *was* feeling a little slow after all. “You mean even though you *already* get to go to a magical school and everything, you still want to go to a *double* magical school?”
 
-Lavender looked at her, puzzled. “What?” said Lavender. “Who *wouldn’t* want to have super extra magical powers? It would be like this whole amazing *destiny* and everything! It’d mean you were *special!*”
+Lavender looked at her, puzzled. “What?” said Lavender. “Who *wouldn’t* want to have super extra magical powers? It would be like this whole amazing *destiny* and everything! It’d mean you were *special!”*
 
 Hannah nodded to that, looking up from where she’d crawled to Daphne’s side and was checking the girl for broken bones. “I wish *I* was a double witch,” Hannah said, and then, sounding a little sadder, “though I don’t believe there is any such thing, really… what did you see Susan do, exactly? I mean, are you sure you weren’t just seeing things after getting stunned?”
 
