--- a/075.md
+++ b/075.md
@@ -6,11 +6,11 @@ It was a looping, meandering alley in the midst of Hogwarts, wandering like a st
 
 At the end of the tangle, six students leaned against rough stones, robes black against the grey walls and trimmed in green, eyes darting from one to each other. Torches burned in the windowless sconce, casting light to ward off the darkness and heat to ward off the chill of the Slytherin dungeons.
 
-“I am *certain,*” Reese Belka snapped, “absolutely *certain,* that was no true ritual. Little firstie witches can’t do that kind of magic, and even if they could, who’s ever heard of a Dark ritual which *sacrifices* a sealed horror for—*that?”*
+“I am *certain,”* Reese Belka snapped, “absolutely *certain,* that was no true ritual. Little firstie witches can’t do that kind of magic, and even if they could, who’s ever heard of a Dark ritual which *sacrifices* a sealed horror for—*that?”*
 
 “Were you—” said Lucian Bole. “I mean—after that girl snapped her fingers—”
 
-Belka’s glare should have melted him. “No,” she spat, “I was *not.*”
+Belka’s glare should have melted him. “No,” she spat, “I was *not.”*
 
 “That is, she wasn’t naked,” drawled Marcus Flint, his broad shoulders leaning back in apparent relaxation against the lumpy stone surface. “Covered in chocolate frosting, yes, but not naked.”
 
@@ -44,7 +44,7 @@ Nobody answered. All their gazes were looking past her.
 
 Slowly, Belka turned around to see what the others were staring at.
 
-“You will do *nothing,*” hissed their Head of House. Severus Snape’s face was enraged, when he spoke small spots of spittle flew from his mouth, further dotting his already-dirtied robes. “You fools have done *enough!* You have embarrassed my House—*lost* to first-years—now you speak of embroiling noble Lords of the Wizengamot in your *pathetic* childish squabbles? *I* shall deal with this matter. *You* will not embarrass this House again, you will not *risk* embarrassing this House again! You are *done* with fighting witches, and if I hear otherwise—”
+“You will do *nothing,”* hissed their Head of House. Severus Snape’s face was enraged, when he spoke small spots of spittle flew from his mouth, further dotting his already-dirtied robes. “You fools have done *enough!* You have embarrassed my House—*lost* to first-years—now you speak of embroiling noble Lords of the Wizengamot in your *pathetic* childish squabbles? *I* shall deal with this matter. *You* will not embarrass this House again, you will not *risk* embarrassing this House again! You are *done* with fighting witches, and if I hear otherwise—”
 
 * * * * *
 
@@ -56,7 +56,7 @@ The upper-year Ravenclaw boys who’d sat down next to him at the dinner-table e
 
 “Look,” said Arty Grey, the seventh-year who was leading in their competition by three witches and a Defence Professor, “the thing you’ve got to understand is, just because she’s *angry* doesn’t mean you lost points. Miss Granger is angry because she got all frightened and you’re *there to be blamed,* you understand? But at the same time, even though she won’t admit it, she’ll be touched that her boyfriend went to such ridiculous and frankly insane lengths to protect her.”
 
-“This is not about *points,*” ground out Harry Potter, the words visibly escaping from between his clenched teeth. Dinner sat ignored on the table in front of him. “This is about *justice.* And *I. Am. Not. Her. Boyfriend!”*
+“This is not about *points,”* ground out Harry Potter, the words visibly escaping from between his clenched teeth. Dinner sat ignored on the table in front of him. “This is about *justice.* And *I. Am. Not. Her. Boyfriend!”*
 
 This was met by a certain amount of sniggering from all present.
 
@@ -98,7 +98,7 @@ Hermione’s mouth opened but her throat locked up before the words came out, wh
 
 “How’s that possible, actually?” said the third-year girl. “I mean for Harry Potter to work through another girl even though he’s bound himself to you? Do the three of you have one of those, you know, arrangements?”
 
-*“Gaaaaack,*” said Hermione Granger, her throat still locked, her brain halted, and her vocal cords spontaneously making a noise like she was coughing up a yak.
+*“Gaaaaack,”* said Hermione Granger, her throat still locked, her brain halted, and her vocal cords spontaneously making a noise like she was coughing up a yak.
 
 * * * * *
 
@@ -106,7 +106,7 @@ Hermione’s mouth opened but her throat locked up before the words came out, wh
 
 “I don’t understand why you’re being so *unreasonable*,” said another second-year witch, who’d replaced the third-year-girl after Hermione had threatened to ask Tracey to eat her soul. “I mean, really, if someone like Harry Potter rescued *me*, I’d be—sending him thank-you cards, and hugging him, and,” the girl’s face was a bit red, “well, kissing him, I’d hope.”
 
-“Yeah!” said the other second-year witch. “I’ve never understood why girls in plays get *angry* when the main character goes out of his way to be nice to them. *I* wouldn’t act like that if the hero liked *me.*”
+“Yeah!” said the other second-year witch. “I’ve never understood why girls in plays get *angry* when the main character goes out of his way to be nice to them. *I* wouldn’t act like that if the hero liked *me.”*
 
 Hermione Granger had dropped her head to the dinner table, her hands slowly pulling at her hair.
 
@@ -130,7 +130,7 @@ And so before long Hermione Granger had turned to the only person left she could
 
 There was a sudden awful silence, broken only by the thuds of their shoes.
 
-*“Anyhow,*” Hermione said hastily, “some of the crazy things they said at dinner got me thinking, so I just want to say, Harry, that I really am grateful to you for saving me and everybody from getting beat up, and even though some parts of this afternoon upset me, I’m sure we can just talk about it calmly.”
+*“Anyhow,”* Hermione said hastily, “some of the crazy things they said at dinner got me thinking, so I just want to say, Harry, that I really am grateful to you for saving me and everybody from getting beat up, and even though some parts of this afternoon upset me, I’m sure we can just talk about it calmly.”
 
 “Ah…” Harry said with a faint and tentative smile, his eyes showing a mixture of befuddlement and apprehension, “that’s… good, I guess?”
 
@@ -198,7 +198,7 @@ But Harry just shook his head. “That’s *not* the responsible thing to do, He
 
 *“Professor McGonagall* isn’t responsible?” Hermione said incredulously. She jammed her hands on her hips, now openly glaring at him. “Are you *nuts?”*
 
-The boy didn’t blink. “You could call it heroic responsibility, maybe,” Harry Potter said. “Not like the usual sort. It means that whatever happens, no matter what, it’s *always* your fault. Even if you tell Professor McGonagall, she’s not responsible for what happens, *you* are. Following the school rules isn’t an excuse, someone else being in charge isn’t an excuse, even trying your best isn’t an excuse. There just aren’t any excuses, you’ve got to *get the job done no matter what*.” Harry’s face tightened. “That’s why I say you’re not thinking responsibly, Hermione. Thinking that your job is done when you tell Professor McGonagall—that isn’t heroine thinking. Like Hannah being beat up is *okay* then, because it isn’t *your fault* anymore. Being a heroine means your job isn’t finished until you’ve done *whatever it takes* to protect the other girls, *permanently.*” In Harry’s voice was a touch of the steel he had acquired since the day Fawkes had been on his shoulder. “You can’t think as if just following the rules means you’ve done your duty.”
+The boy didn’t blink. “You could call it heroic responsibility, maybe,” Harry Potter said. “Not like the usual sort. It means that whatever happens, no matter what, it’s *always* your fault. Even if you tell Professor McGonagall, she’s not responsible for what happens, *you* are. Following the school rules isn’t an excuse, someone else being in charge isn’t an excuse, even trying your best isn’t an excuse. There just aren’t any excuses, you’ve got to *get the job done no matter what*.” Harry’s face tightened. “That’s why I say you’re not thinking responsibly, Hermione. Thinking that your job is done when you tell Professor McGonagall—that isn’t heroine thinking. Like Hannah being beat up is *okay* then, because it isn’t *your fault* anymore. Being a heroine means your job isn’t finished until you’ve done *whatever it takes* to protect the other girls, *permanently.”* In Harry’s voice was a touch of the steel he had acquired since the day Fawkes had been on his shoulder. “You can’t think as if just following the rules means you’ve done your duty.”
 
 “I think,” Hermione said evenly, “that you and I might disagree about some things, Mr. Potter. Like whether you or Professor McGonagall is more *responsible*, and whether being *responsible* usually involves people running around and screaming, and how much it’s a good idea to follow school rules. And just because we disagree, Mr. Potter, doesn’t mean that *you* get the final say.”
 
@@ -218,7 +218,7 @@ Hermione stared at Harry, as his recitation wound down.
 
 “Well?” said Harry.
 
-“I shouldn’t have to make promises,” she said, “just to be *consulted* about *my own life.*” She turned from Harry and began walking toward the Ravenclaw tower, not looking at him. “But I’ll think about it, anyway.”
+“I shouldn’t have to make promises,” she said, “just to be *consulted* about *my own life.”* She turned from Harry and began walking toward the Ravenclaw tower, not looking at him. “But I’ll think about it, anyway.”
 
 She heard Harry sigh, and after that they walked in silence for a while, passing through an archway of some reddish metal like copper, into a corridor that was just like the one they’d left except that it was tiled in pentagons instead of squares.
 
