--- a/076.md
+++ b/076.md
@@ -133,7 +133,7 @@ The Potions Master trailed off, while Rianne stared at him.
 
 “I will try one last thing,” said Snape. “Something I have not tried before. Miss Felthorne, listen to the *sound* of my voice, the *way* I say it, not the words themselves, and tell me what you think it means. Can you do that? Good,” said Snape, as she nodded obediently, though she wasn’t sure at all what she was supposed to do.
 
-And Severus Snape drew a breath, and intoned, *“FOR THOSE TWO DIFFERENT SPELLETS CANNOT EXIST IN THE SAME VULD.*”
+And Severus Snape drew a breath, and intoned, *“FOR THOSE TWO DIFFERENT SPELLETS CANNOT EXIST IN THE SAME VULD.”*
 
 It sent shivers down her spine, all the worse for knowing the hollow words had been spoken in imitation of a true prophecy. Unnerved, she blurted out the first thing which came to mind, which might have been influenced by her present company. “Those two different ingredients cannot exist in the same cauldron?”
 
