--- a/077.md
+++ b/077.md
@@ -52,7 +52,7 @@ The boy smiled, now with a touch of coldness again. “Okay, I’ll figure out s
 
 “Obstacles mean you *get creative*, Headmaster. It doesn’t mean you abandon the children you’re supposed to protect. Let the Light win, and if trouble comes of it—” The boy shrugged. “Let Light win again.”
 
-“So might phoenixes speak, if they had words,” the old wizard said. “But you do not understand the *phoenix’s price.*”
+“So might phoenixes speak, if they had words,” the old wizard said. “But you do not understand the *phoenix’s price.”*
 
 The last two words were spoken in a peculiarly clear voice that seemed to echo around the office, and then a huge rumbling noise seemed to come from all around them.
 
@@ -70,7 +70,7 @@ The stairs went on for only a short distance, one straight rising flight without
 
 At the top was a door of solid metal, looking black in the blue light cast from Harry’s wand, meaning that the metal itself was either black or perhaps red.
 
-Albus Dumbledore lifted up his long wand like a brandished symbol, and again spoke in that strange voice which seemed to echo in Harry’s ears, as though burning itself into his memory: *“Phoenix’s fate.*”
+Albus Dumbledore lifted up his long wand like a brandished symbol, and again spoke in that strange voice which seemed to echo in Harry’s ears, as though burning itself into his memory: *“Phoenix’s fate.”*
 
 That last door opened, and Harry followed Dumbledore inside.
 
@@ -106,7 +106,7 @@ Harry lifted his gaze from the pedestal to look at Dumbledore. “Would the worl
 
 Harry looked away from the blue eyes, cast his gaze down at the black metal of the floor. The Headmaster was trying to tell him something important, that was clear; and it wasn’t something that Harry thought was stupid, either.
 
-“There was a Muggle once named Mohandas Gandhi,” Harry said to the floor. “He thought the government of Muggle Britain shouldn’t rule over his country. And he refused to fight. He convinced his whole country not to fight. Instead he told his people to walk up to the British soldiers and let themselves be struck down, without resisting, and when Britain couldn’t stand doing that any more, we freed his country. I thought it was a very beautiful thing, when I read about it, I thought it was something higher than all the wars that anyone had ever fought with guns or swords. That they’d really done that, and that it had *actually worked.*” Harry drew another breath. “Only then I found out that Gandhi told his people, during World War II, that if the Nazis invaded they should use nonviolent resistance against them, too. But the Nazis would’ve just shot everyone in sight. And maybe Winston Churchill always felt that there should’ve been a better way, some clever way to win without having to hurt anyone; but he never found it, and so he had to fight.” Harry looked up at the Headmaster, who was staring at him. “Winston Churchill was the one who tried to convince the British government *not* to give Czechoslovakia to Hitler in exchange for a peace treaty, that they should fight right away—”
+“There was a Muggle once named Mohandas Gandhi,” Harry said to the floor. “He thought the government of Muggle Britain shouldn’t rule over his country. And he refused to fight. He convinced his whole country not to fight. Instead he told his people to walk up to the British soldiers and let themselves be struck down, without resisting, and when Britain couldn’t stand doing that any more, we freed his country. I thought it was a very beautiful thing, when I read about it, I thought it was something higher than all the wars that anyone had ever fought with guns or swords. That they’d really done that, and that it had *actually worked.”* Harry drew another breath. “Only then I found out that Gandhi told his people, during World War II, that if the Nazis invaded they should use nonviolent resistance against them, too. But the Nazis would’ve just shot everyone in sight. And maybe Winston Churchill always felt that there should’ve been a better way, some clever way to win without having to hurt anyone; but he never found it, and so he had to fight.” Harry looked up at the Headmaster, who was staring at him. “Winston Churchill was the one who tried to convince the British government *not* to give Czechoslovakia to Hitler in exchange for a peace treaty, that they should fight right away—”
 
 “I recognise the name, Harry,” said Dumbledore. The old wizard’s lips twitched upward. “Although honesty compels me to say that dear Winston was never one for pangs of conscience, even after a dozen shots of Firewhiskey.”
 
@@ -170,7 +170,7 @@ The old wizard’s lips parted, and no words came forth.
 
 Silver light falling on shattered wands.
 
-“Fawkes gave me a mission,” the boy repeated, “and I will carry out that mission if I must break the entire Ministry to do it. That’s the part of the answer that you’re missing. You don’t stop and say, *oh well, guess I can’t possibly figure out any way to stop bullying in Hogwarts,* and *leave* it at that. You just keep looking until you figure out how to do it. If that requires breaking Lucius Malfoy’s entire conspiracy, *fine.*”
+“Fawkes gave me a mission,” the boy repeated, “and I will carry out that mission if I must break the entire Ministry to do it. That’s the part of the answer that you’re missing. You don’t stop and say, *oh well, guess I can’t possibly figure out any way to stop bullying in Hogwarts,* and *leave* it at that. You just keep looking until you figure out how to do it. If that requires breaking Lucius Malfoy’s entire conspiracy, *fine.”*
 
 “And the true fight, the fight against Voldemort?” the old wizard said in an unsteady voice. “What will you do to win *that*, Harry? Will you break the whole world? Even if someday you gain such power, you are not yet beyond prices, and perhaps you never will be! For you to act this way *now* is nothing short of madness!”
 
@@ -464,7 +464,7 @@ Maybe she shouldn’t’ve answered; maybe she should’ve just turned and fled,
 
 “That’s *all?”* whispered the voice incredulously. Sadness seemed to infuse it. “I hoped for better from you, Hermione. Surely such a Ravenclaw as you, the most intelligent Ravenclaw to grace Hogwarts in a generation, knows that appearances can be misleading.”
 
-“Oh, I know it,” said Hermione. She took another step back, her tired fingers tightening on the wand. “But the thing that people forget sometimes, is that even though appearances *can* be misleading, they’re usually *not.*”
+“Oh, I know it,” said Hermione. She took another step back, her tired fingers tightening on the wand. “But the thing that people forget sometimes, is that even though appearances *can* be misleading, they’re usually *not.”*
 
 There was a pause.
 
