--- a/078.md
+++ b/078.md
@@ -72,7 +72,7 @@ Ron gave their General a surprised and worried look. “Hey,” the Gryffindor b
 
 Several people swallowed nervously.
 
-“Oh, *stop it,*” Susan said sharply. “She’s just a battle-hardened member of S.P.H.E.W., that’s all General Sunshine means.”
+“Oh, *stop it,”* Susan said sharply. “She’s just a battle-hardened member of S.P.H.E.W., that’s all General Sunshine means.”
 
 “Still,” Ernie said, turning to look seriously at Susan, “I think you’d better go with whatever group fights Chaos, Captain Bones. I know you can’t use your double magical powers except when innocents are in danger, but I mean—just in case Miss Davis *does,* you know, go out of control and try to eat someone’s soul—”
 
