--- a/080.md
+++ b/080.md
@@ -72,7 +72,7 @@ The door through which the witness was brought forth was set directly beneath Ha
 
 —and the source of the horrible wrongness, half-hidden beneath a tattered cloak.
 
-Harry shot to his feet before he could even think, it was only Professor McGonagall’s sudden frantic grab on his wrist that stopped his hand going for his wand; and the Transfiguration Professor whispered desperately, *“Harry it’s all right there’s a Patronus—*”
+Harry shot to his feet before he could even think, it was only Professor McGonagall’s sudden frantic grab on his wrist that stopped his hand going for his wand; and the Transfiguration Professor whispered desperately, *“Harry it’s all right there’s a Patronus—”*
 
 It took a few seconds for Harry to remember himself. For the part of himself that understood that Hermione hadn’t been directly exposed to a Dementor, to argue his other parts into something like sanity—
 
@@ -226,7 +226,7 @@ She looked at Harry Potter and though she didn’t speak, it was absolutely clea
 
 *please—*
 
-And in the Most Ancient Hall of the Wizengamot an icy voice rang out, speech the colour of liquid nitrogen, pitched too high for that it came from too young a throat, and that voice said, *“Lucius Malfoy.*”
+And in the Most Ancient Hall of the Wizengamot an icy voice rang out, speech the colour of liquid nitrogen, pitched too high for that it came from too young a throat, and that voice said, *“Lucius Malfoy.”*
 
 * * * * *
 
