--- a/084.md
+++ b/084.md
@@ -345,7 +345,7 @@ Her mind was *slow to remember* for a few seconds, which frightened her, but the
 
 Hermione had a sickening feeling where this was going. “I remember,” she whispered.
 
-“I gave the Chaos Legion anti-conformity training, you know. I had each Legionnaire stand in the middle and say ‘Twice two is four!’ or ‘Grass is green!’ while everyone else in the Chaos Legion called them idiots or sneered at them—Allen Flint did really good sneers—or even just gave them blank looks and then walked away. The thing you’ve got to remember is, *only* the Chaos Legion has ever practiced anything like that. Nobody else in Hogwarts even knows what conformity *is.*”
+“I gave the Chaos Legion anti-conformity training, you know. I had each Legionnaire stand in the middle and say ‘Twice two is four!’ or ‘Grass is green!’ while everyone else in the Chaos Legion called them idiots or sneered at them—Allen Flint did really good sneers—or even just gave them blank looks and then walked away. The thing you’ve got to remember is, *only* the Chaos Legion has ever practiced anything like that. Nobody else in Hogwarts even knows what conformity *is.”*
 
 “Harry!” Her voice was wobbling. “How bad *is* it?”
 
