--- a/002.md
+++ b/002.md
@@ -55,7 +55,7 @@ Professor McGonagall’s lips were twitching harder now. “Magic.”
 
 “Magic *isn’t enough* to do that! You’d have to be a god!”
 
-Professor McGonagall blinked. “That’s the first time I’ve ever been called *that.*”
+Professor McGonagall blinked. “That’s the first time I’ve ever been called *that.”*
 
 A blur was coming over Harry’s vision, as his brain started to comprehend what had just broken. The whole idea of a unified universe with mathematically regular laws, that was what had been flushed down the toilet; the whole notion of *physics*. Three thousand years of resolving big complicated things into smaller pieces, discovering that the music of the planets was the same tune as a falling apple, finding that the true laws were perfectly universal and had no exceptions anywhere and took the form of simple maths governing the smallest parts, *not to mention* that the mind was the brain and the brain was made of neurons, a brain was what a person *was*—
 
