--- a/050.md
+++ b/050.md
@@ -5,7 +5,7 @@ Padma Patil had finished her dinner a little late, getting on toward seven-thirt
 
 It was while she was passing through a long, twisting, narrow stone corridor that the whisper came, sounding like it was coming from right behind her.
 
-*“Padma Patil…*”
+*“Padma Patil…”*
 
 She spun around quick as lightning, her wand already snatched up from a pocket of her robes and leaping into her hands, if Harry Potter thought he could sneak up on and scare *her* that easily—
 
@@ -17,7 +17,7 @@ There was no one there, either.
 
 The whispering sigh came again, soft and dangerous with a slight hissing undertone.
 
-*“Padma Patil, Slytherin girl…*”
+*“Padma Patil, Slytherin girl…”*
 
 “Harry Potter, Slytherin boy,” she said out loud.
 
@@ -183,7 +183,7 @@ Hermione clutched at her chestnut curls, a gesture Harry hadn’t seen from her 
 
 The defence Professor had suggested that Harry identify all the key influential students inside and outside his year and try to gain control of the entire Hogwarts rumour mill, remarking that this was a generally useful and amusing challenge for any true Slytherin attending Hogwarts.
 
-“Nothing like *that,*” Harry said quickly, “he just said in a general way that I should get influence over the people spreading rumours, and *I* decided that the *nice* version of that would be to just inform Padma directly about the meaning of what she was doing, and the possible consequences of her actions, instead of trying to threaten her or anything like that—”
+“Nothing like *that,”* Harry said quickly, “he just said in a general way that I should get influence over the people spreading rumours, and *I* decided that the *nice* version of that would be to just inform Padma directly about the meaning of what she was doing, and the possible consequences of her actions, instead of trying to threaten her or anything like that—”
 
 *“You call that not threatening someone?”* Hermione’s hands were pulling at her hair now.
 
