--- a/062.md
+++ b/062.md
@@ -283,7 +283,7 @@ Harry looked on his shoulder at where Fawkes had perched, saw the phoenix’s ey
 
 Fawkes didn’t understand the conversation.
 
-The young boy looked at the old wizard, and said in a thick voice, “Or maybe the phoenixes are wiser than us, smarter than us, maybe they follow us around hoping that someday we’ll *listen* to them, someday we’ll *get* it, someday we’ll just *take*, the prisoners, *out,* of their *cells—*”
+The young boy looked at the old wizard, and said in a thick voice, “Or maybe the phoenixes are wiser than us, smarter than us, maybe they follow us around hoping that someday we’ll *listen* to them, someday we’ll *get* it, someday we’ll just *take*, the prisoners, *out,* of their *cells—”*
 
 Harry spun and pulled open the oaken door and stepped onto the staircase and slammed the door behind him.
 
